resources/assets/themes/theme19/_base.scss
/* ... */
ul.navbar-nav > li.nav-item > ul.dropdown-menu.show {
  background-color: var(--color-background);
  display: flex;
  flex-direction: column;
  padding: 0.5rem;
  border-radius: 0.5rem;
}

ul.nav,
ul.navbar-nav,
ul.navbar-nav > li.nav-item > ul.dropdown-menu {
  gap: 0.5rem;

  > li.nav-item,
  > li {
    border-radius: 0.5rem;
    background-color: var(--color-shade-bg-1);
    transition: background-color 150ms;

    &.nav-item--userhints {
      margin: 0;
    }

    &:has(> a.nav-link.active),
    &:has(> a.dropdown-item.active) {
      background-color: var(--color-shade-bg-2);

      > a.nav-link,
      > a.dropdown-item {
        background-color: transparent;
        border-color: var(--color-shade-bg-4);
      }
    }

    > a.nav-link,
    > a.dropdown-item {
      border-radius: 0.5rem;
      border: solid 0.1em var(--color-shade-bg-1);
      padding: 0.4rem 1rem;
      color: var(--color-foreground);
      text-decoration: none;
      font-size: 1.2em;
      box-sizing: border-box;

      transition-property: filter, border-color;
      transition-duration: 400ms;
      transition-timing-function: ease-in;

      &:visited,
      &:focus,
      &:active,
      &:hover {
        background-color: transparent;
        outline: none;
        box-shadow: none;
        color: var(--color-foreground);
        text-decoration: none;
      }
    }

    &:hover,
    &:active,
    &:focus,
    &:focus-within,
    &:has(> a.nav-link.active):hover,
    &:has(> a.nav-link.active):active,
    &:has(> a.nav-link.active):focus,
    &:has(> a.nav-link.active):focus-within,
    &:has(> a.dropdown-item.active):hover,
    &:has(> a.dropdown-item.active):active,
    &:has(> a.dropdown-item.active):focus,
    &:has(> a.dropdown-item.active):focus-within {
      &.bg-danger {
        > a.nav-link,
        > a.dropdown-item {
          border-color: var(--color-glow-primary);
          filter: var(--filter-glow-primary);

          &:visited,
          &:focus,
          &:active,
          &:hover {
            color: var(--color-glow-primary);
          }
        }
      }

      &:not(.bg-danger) {
        > a.nav-link,
        > a.dropdown-item {
          filter: var(--filter-glow-secondary);
        }
      }

      > a.nav-link,
      > a.dropdown-item {
        border: solid 0.1em var(--color-glow-secondary);
        outline: none;
        box-shadow: none;
        background-color: transparent;
        transition: var(--transition-glow);

        &:visited,
        &:focus,
        &:active,
        &:hover {
          color: var(--color-glow-secondary);
          outline: none;
          box-shadow: none;
          text-decoration: none;
        }
      }
    }
  }
}

.nav-tabs,
.nav-pills,
.pager {
  a {
    color: var(--color-foreground);
    text-decoration: none;
  }
}

$choices-primary-color: var(--color-shade-bg-2);

div.choices__list--dropdown > div.choices__list > div.choices__item--selectable {
  background-color: transparent;
  color: var(--color-foreground);

  &.is-selected:not(.is-highlighted) {
    background-color: transparent; // again for longest prefix
    color: var(--color-glow-primary);
    filter: var(--text-glow-primary);
  }

  &.is-highlighted {
    &:before {
      background-color: var(--color-shade-bg-1);
    }

    background-color: transparent; // again for longest prefix
    color: var(--color-glow-secondary);
    filter: var(--text-glow-secondary);
    transition: var(--transition-glow);
  }
}

.popover {
  --bs-popover-body-padding-y: 0.5rem;
  --bs-popover-body-padding-x: 0.5rem;
}

.alert {
  --bs-alert-color: var(--color-foreground);

  &.alert-info,
  &.alert-warning,
  &.alert-danger,
  &.alert-success {
    border: none;
    border-left: solid 0.5rem var(--bs-alert-bg);
    background-color: var(--color-shade-bg-1);
  }

  &.alert-info a.text-danger {
    --bs-danger-rgb: var(--color-foreground);
  }
}

.shift-calendar .lane {
  background-color: $body-bg;
}

.choices:focus,
.choices.is-focused {
  .choices__list.choices__list--dropdown {
    border-color: var(--color-glow-primary);
  }

  .choices__inner {
    border-color: var(--color-glow-primary);
  }

  border-color: var(--color-glow-primary);
  outline: none;
  box-shadow: none;
  z-index: 1022;
  filter: var(--filter-glow-primary);
  transition: var(--transition-glow);
}

.form-control {
  border-color: var(--color-shade-fg-4);

  &.choices__inner {
    border-color: var(--color-shade-fg-4);
  }

  &:focus {
    border-color: var(--color-glow-primary);
    outline: none;
    box-shadow: none;
    filter: var(--filter-glow-primary);
    transition: var(--transition-glow);
  }
}

.form-check-input {
  border: solid 0.1rem var(--color-foreground);

  &:focus {
    border-color: var(--color-glow-primary);
    outline: none;
    box-shadow: none;
    filter: var(--filter-glow-primary);
    transition: var(--transition-glow);
  }

  &:checked {
    border-color: var(--color-glow-primary);
    filter: var(--filter-glow-primary);
    transition: var(--transition-glow);
  }
}

body::before {
  content: '';
  position: fixed;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  mask-size: cover;
  mask-position: bottom right;
  mask-repeat: no-repeat;
  mask-origin: padding-box;
  mask-image: url('background.svg');
  background-color: var(--color-background-image);
}

// easteregg: flying fairydust on own profile / "my shifts"
// fall back to regular background if reduced motion is prefered
@media (prefers-reduced-motion: no-preference) {
  body:has(div.row .bi-calendar-week):has(div.user-info)::before {
    content: '';
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    mask-size: contain;
    mask-position: center;
    mask-repeat: no-repeat;
    mask-origin: padding-box;
    mask-image: url('fairydust.svg');
    background-color: var(--color-background-image);
  }
}

